# watchdogmobile

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/uhk/watchdog/watchdogmobile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Buffer.cpp  Buffer.h  CommunicationManager.cpp  CommunicationManager.h  DatabaseManager.cpp  DatabaseManager.h  FlatBuffer.cpp  FlatBuffer.h  Monitor.cpp  Monitor.h  Sample.cpp  Sample.h  SensorManager.cpp  SensorManager.h  SensorValue.cpp  SensorValue.h  TransformerFB.cpp  TransformerFB.h  WatchDogCore.cpp  WatchDogCore.h  native-lib.cpp
app/src/main/cpp/flatbuffers/: idl.h  reflection.h  reflection_generated.h  util.h
app/src/main/cpp/flatbuffers/objects/: DataFB_generated.h  SampleFB_generated.h  SensorValueFB_generated.h
app/src/main/java/com/google/flatbuffers/: FlatBufferBuilder.java  Struct.java  Table.java
app/src/main/java/uhk/watchdog/watchdogmobile/app/: AppConfig.java  AppCore.java  AppState.java
app/src/main/java/uhk/watchdog/watchdogmobile/app/service/: WatchDogService.java
app/src/main/java/uhk/watchdog/watchdogmobile/app/utils/: ConfigUtils.java  LoggingUtils.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/: WatchDogCore.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/buffer/: Buffer.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/buffer/impl/: BufferImpl.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/communication/: CommunicationListener.java  CommunicationManager.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/communication/constants/: NetworkCommunication.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/communication/impl/: Mqtt.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/controller/: Controller.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/controller/impl/: ControllerImpl.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/data/: DatabaseManager.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/data/base/: DatabaseCore.java  TransactionManager.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/flatbuffer/: Transformer.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/model/: Sample.java  SensorValue.java  User.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/monitor/: Monitor.java  SensorIncidentListener.java
app/src/main/java/uhk/watchdog/watchdogmobile/core/sensors/: SensorManager.java  WatchSensorListener.java
app/src/main/java/uhk/watchdog/watchdogmobile/gui/mainScreen/: MainActivity.java
app/src/main/java/uhk/watchdog/watchdogmobile/gui/startActivity/: StartActivity.java
app/src/main/java/uhk/watchdog/watchdogmobile/gui/utils/: ImageUtil.java  RecyclerAdapterListener.java  RecyclerItemTouchListener.java
app/src/main/res/color/: default_list_selector.xml  nav_drawer_text_selector.xml  tab_menu_selector.xml
app/src/main/res/drawable/: default_button_selector.xml  default_checkbox_selector.xml  default_list_divider.xml  default_spinner_selector.xml  nav_drawer_background_selector.xml  nav_drawer_divider.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_main_nav_list_header.xml  activity_main_nav_list_item.xml  activity_setting.xml  activity_start.xml  fragment_state_app.xml  preconfig.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/uhk/watchdog/watchdogmobile/: ExampleUnitTest.java
(+25 files in other folders)
